force-app/main/default/objects/CommercientSF__TblArTerms__c/CommercientSF__TblArTerms__c.object-meta.xml
<CustomObject>
    <label>Syspro AR Terms</label>
    <nameField>
        <label>Syspro AR Terms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro AR Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>