force-app/main/default/objects/CommercientSF__TblArTerms__c/fields/CommercientSF__Description__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Description__c</fullName>
    <label>Terms code description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>