force-app/main/default/objects/CommercientSF__TblArTerms__c/fields/CommercientSF__DiscDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscDate__c</fullName>
    <label>Discount on fixed date</label>
    <type>DateTime</type>
</CustomField>