force-app/main/default/objects/CommercientSF__TblArTerms__c/fields/CommercientSF__DiscDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscDayOfMonth__c</fullName>
    <label>Discount on day of month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>