force-app/main/default/objects/CommercientSF__TblArTerms__c/fields/CommercientSF__DiscDays__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscDays__c</fullName>
    <label>Days discount allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>