force-app/main/default/objects/CommercientSF__TblArTerms__c/fields/CommercientSF__DiscountOption__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscountOption__c</fullName>
    <label>Discount options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>