force-app/main/default/objects/CommercientSF__TblArTerms__c/fields/CommercientSF__DiscPct__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscPct__c</fullName>
    <label>Discount percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>