force-app/main/default/objects/CommercientSF__TblArTerms__c/fields/CommercientSF__DueDays__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DueDays__c</fullName>
    <label>Days until due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>