force-app/main/default/objects/CommercientSF__TblArTerms__c/fields/CommercientSF__InvDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvDate__c</fullName>
    <label>Invoice due on fixed date</label>
    <type>DateTime</type>
</CustomField>