force-app/main/default/objects/CommercientSF__TblArTerms__c/fields/CommercientSF__InvDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvDayOfMonth__c</fullName>
    <label>Invoice due on the day of</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>