force-app/main/default/objects/CommercientSF__TblArTerms__c/fields/CommercientSF__InvMonths__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvMonths__c</fullName>
    <label>Number of discount months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>