force-app/main/default/objects/CommercientSF__TblArTerms__c/fields/CommercientSF__InvoiceOption__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoiceOption__c</fullName>
    <label>Invoice options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>