force-app/main/default/objects/CommercientSF__TblArTerms__c/fields/CommercientSF__TermsCodes__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TermsCodes__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>TermsCode</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>